<resources>
    <string name="app_name">Loja Virtual</string>
    <string name="loja">Loja</string>
    <string name="virtual">Virtual</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">entrar</string>
    <string name="criar_conta_txt">Não tem uma conta? cadastre-se agora!</string>
    <string name="logo_img_description">Logo Img</string>
    <string name="nome">Nome e sobrenome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="fa_a_seu_cadastro">Faça seu Cadastro</string>
    <string name="texto_dialog_carregando">Carregando...</string>
    <string name="menu_item_perfil">Perfil</string>
    <string name="menu_item_pedidos">Pedidos</string>
    <string name="menu_item_delogar">Sair da Sessão</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="escolha_o_tamanho">Escolha o tamanho</string>
    <string name="pre_o">Preço</string>
    <string name="texto_tamanho_38">38</string>
    <string name="texto_tamanho_39">39</string>
    <string name="texto_tamanho_40">40</string>
    <string name="text_pagamento">Preencha todos os campos antes \nde fazer o pagamento</string>
    <string name="hint_rua">" Rua e Número"</string>
    <string name="hint_cidade_e_estado">" Cidade e Estado"</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_bairro">" Bairro"</string>
</resources>